<resources>
    <string name="app_name">LoginChatUdemy</string>
    <!--Login View-->
    <string name="login_email">Correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_confirm_password">Confirmar Contraseña</string>
    <string name="login_sign_in">Iniciar sesión</string>
    <string name="login_sign_up">Crear cuenta</string>
    <string name="login_reset_password">Recuperar Contraseña</string>
    <string name="login_sign_in_google">Iniciar con Google </string>
    <string name="login_forgot_password">Recuperar Contraseña</string>
    <string name="login_create_account">Crear una cuenta</string>
    <string name="login_go_login">Regresar al inicio de sesión</string>
    <string name="Login_create_account">¿Aún no tienes una cuenta?</string>

    <!-- Bottom Navigation View -->
    <string name="bottom_navigation_chat">Chat</string>
    <string name="bottom_navigation_rates">Rates</string>
    <string name="bottom_navigation_info">Info</string>

    <!--FragmentChat-->
    <string name="chat_textHint_message">Escribe un mensaje...</string>

    <string name="info_label_message">Mensajes totales:</string>
    <string name="info_label_no_name">Nombre no disponible</string>
    
    <string name="option_menu_log_out">Cerrar Sesión</string>

    <!--Rates-->
    <string name="dialog_title">Opinar sobre la App!</string>
    <string name="dialog_edit_text_hint">Danos tu opinion</string>
    <string name="dialog_ok">Opinar</string>
    <string name="dialog_cancel">Cancelar</string>
</resources>
