<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.LoginActivity">

        <EditText
            android:id="@+id/editTextEmailLogIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/editTextPasswordLogIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogIn" />

        <TextView
            android:id="@+id/textViewForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="32dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogInGoogle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <Button
            android:id="@+id/buttonLogInGoogle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_ripple_google"
            android:text="@string/login_sign_in_google"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:background="@drawable/button_ripple"
            android:text="@string/login_create_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/login_sign_in"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogIn" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="195dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/usuario" />


        <!--<com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>